@@ -34,6 +34,16 @@
  */
 #define WITH_BRIDGE
 
+/* Use the username/password and ACL checks defined in security_external.c
+ * This is empty by default, but gives a more straightforward way of adding
+ * support for existing username/password databases to mosquitto.
+ * Uncommenting without adding your own code to security_external.c will
+ * result in all access being denied.
+ * Get in touch with the authors if you need help adding support for your
+ * system.
+ */
+//#define WITH_EXTERNAL_SECURITY_CHECKS
+
 /* ============================================================
  * Compatibility defines
  *
